Fix nav button spacing

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -100,6 +100,10 @@ button:hover {
     padding: 0 160px 0 86px;
 }
 
+.header button {
+    margin: 0 8px 0 8px;
+}
+
 .header ul {
     list-style: none;
     display:flex;
